--- a/introducing-json/css/main.css
+++ b/introducing-json/css/main.css
@@ -85,6 +85,12 @@ img.figures {
   /* L / R paddings at '_space.css' */
 }
 
+/* ASIDE */
+aside {
+  position: relative;
+  display: block;
+}
+
 .cards {
   display: block;
   width: 256px;
@@ -261,6 +267,11 @@ header.scrolling-active {
 
 /* ===== Theme ===== */
 /* HEADER */
+header {
+  background-color: #fff;
+  z-index: 999;
+}
+
 /* MAIN */
 .cards {
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.6);
@@ -290,8 +301,8 @@ header.scrolling-active {
 /* L */
 @media all and (min-width: 1024px) {
 
-  header,
+  /* header,
   main,
   aside,
-  footer {}
+  footer {} */
 }
